--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
     "lint-f": "eslint --fix --ext .ts,.js,.vue ."
   },
   "devDependencies": {
-    "@nuxt/image-edge": "^1.0.0-27919678.2f5b64b",
-    "@nuxt/types": "^2.15.8",
+    "@nuxt/image-edge": "1.0.0-28008586.381b906",
+    "@nuxt/types": "^2.16.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@nuxtjs/tailwindcss": "^6.6.5",
     "@tailwindcss/forms": "^0.5.3",
-    "@vueform/multiselect": "^2.5.6",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@vueform/multiselect": "^2.6.1",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.7.0",
-    "flowbite": "^1.6.3",
-    "nuxt": "^3.2.0",
+    "eslint-plugin-vue": "^9.10.0",
+    "flowbite": "^1.6.4",
+    "nuxt": "^3.3.3",
     "nuxt-font-loader": "^2.3.1",
     "nuxt-icon": "^0.1.8",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.7",
     "tailwindcss-dark-mode": "1.1.7",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.2.0"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.6",
-    "openai": "^3.1.0",
+    "@pinia/nuxt": "^0.4.7",
+    "openai": "3.2.1",
     "postcss-rtlcss": "^4.0.3",
-    "sass": "^1.56.1",
-    "vue-json-viewer": "3"
+    "sass": "^1.60.0",
+    "vue-json-viewer": "^3.0.4"
   }
 }
