--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.7",
+    "@vercel/edge": "^0.3.1",
     "nuxi": "^3.3.3",
     "openai": "3.2.1",
     "postcss-rtlcss": "^4.0.3",
